--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,14 @@
-spring.application.name=rest-spring-boot
+spring:
+  datasource:
+    dbcp2:
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/rest_with_spring?useTimeZone=true&serverTimezone=UTC
+      username: <DATABASE NAME>
+      password: <DATABASE PASSWORD>
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+      show-sql: false
