--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,12 @@
 spring:
   datasource:
-    dbcp2:
-      driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/rest_with_spring?useTimeZone=true&serverTimezone=UTC
-      username: <DATABASE NAME>
-      password: <DATABASE PASSWORD>
+    url: jdbc:mysql://localhost:3306/rest_with_spring?useTimeZone=true&serverTimeZone=UTC
+    username: root
+    password: Nicol123*
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-      show-sql: false
+    open-in-view: false
+    show-sql: false
